--- a/css.css
+++ b/css.css
@@ -54,7 +54,7 @@ h3 {
   margin-top: 1rem;
 }
 
-.time-display {
+.time-display, .category {
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 0.5rem;
